WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277339
[WPE][GTK] Fix GPUProcess compilation
https://bugs.webkit.org/show_bug.cgi?id=277339
Summary
[WPE][GTK] Fix GPUProcess compilation
Alejandro G. Castro
Reported
2024-07-30 05:50:59 PDT
After
r281360
and
r281488
the compilation was broken.
Attachments
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2024-07-30 06:00:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31461
EWS
Comment 2
2024-07-30 13:28:07 PDT
Committed
281595@main
(5781fed5462d): <
https://commits.webkit.org/281595@main
> Reviewed commits have been landed. Closing PR #31461 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug