[WPE][GTK] Fix GPUProcess compilation https://bugs.webkit.org/show_bug.cgi?id=277339

Reviewed by Michael Catanzaro.

Fix the compilation after the commits:
  - https://commits.webkit.org/281488@main
  - https://commits.webkit.org/281360@main

* Source/WebKit/GPUProcess/GPUConnectionToWebProcess.h:
(WebKit::GPUConnectionToWebProcess::updateSharedPreferencesForWebProcess):
We avoid the const because we are going to move it.
* Source/WebKit/Shared/unix/AuxiliaryProcessMain.cpp: Avoid the
  compilation properly.
* Source/WebKit/UIProcess/Launcher/glib/ProcessLauncherGLib.cpp:
(WebKit::ProcessLauncher::launchProcess): Ditto.

Canonical link: https://commits.webkit.org/281595@main